	* sawfish.desktop
	* sawfish-wm.desktop
	* sawfish-session.desktop: remove useless translations, which are equal to the original string

	* lisp/sawfish/wm/ext/infinite-desktop.jl: update file-header

	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: update file-headers

	* man/news.texi: better description for infinite-desktop.jl

2009-02-17  Christopher Bratusek <zanghar@freenet.de>
	* Makefile.in
	* sawfish-session.desktop: added session desktop file

	* configure.in: don't just read README.IMPORTANT if this is an upgrade

	* lisp/sawfish/wm/ext/3d-hack.jl: remove annotate-points - not beeing used

	* man/sawfish.texi: Major Documentation updated [Derek Upham]

2009-02-16  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/animation/outline.jl: load sawfish.wm.gaol for screen-width/height to be set

	* man/news.texi: updated

2009-02-15  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: print message at the end that README.IMPORTANT should be read

	* lisp/sawfish/wm/viewport.jl: changed a string

2009-02-15  Guillermo S. Romero <gsromero@svn.gnome.org>
	* man/faq.texi: more s/sawmill/sawfish/ clean up
	                also explained rc duality (~/.sawfish[/]rc).

	* KEYBINDINGS: Suggest xmodmap and xev. Super (not s) is Super
	
	* man/user-doc.texi: brain backup about workspaces, viewports, etc
	
2009-02-14  Christopher Bratusek <zanghar@freenet.de>
	* man/user-doc.texi: added introduction

	* KEYBINDINGS: fixed some misstakes

2009-02-12  Christopher Bratusek <zanghar@freenet.de>
	* man/user-doc.texi: added uniconify, maximize, unmaximize, delete, shade, unshade, raise, lower, cycle
	                     nicer formatting

2009-02-11  Christopher Bratusek <zanghar@freenet.de>
	* man/user-doc.texi
	* man/Makefile.in: add intial try of a user-doc

2009-02-09  Christopher Bratusek <zanghar@freenet.de>
	* KEYBINDINGS: S is Super not Shift
	               W is Modifier and M is Alt
	               s/take place/are active/g
	