@@ -10,6 +10,8 @@
 
 	* man/news.texi: better description for infinite-desktop.jl
 
+	* themes/*/.jl: s/sawmill/sawfish/g
+
 2009-02-17  Christopher Bratusek <zanghar@freenet.de>
 	* Makefile.in
 	* sawfish-session.desktop: added session desktop file
